<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_typePizza"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiner"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:entries="@array/android_layout_arrays"
            >
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_TypeMasa"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"

            >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:checked="false"
                android:text="@string/app_Masa1"

                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/app_Masa2"

                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:text="@string/app_Masa3"
                android:textSize="17sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_comple"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/check_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_Comple1"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/check_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/app_Comple2"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_comple"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/app_EditTxtHint"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:fontFamily="sans-serif"
        android:text="@string/app_order"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:drawableStart="@drawable/ic_delivery"
        android:paddingLeft="60dp"
        android:drawablePadding="-60dp"
        />

</RelativeLayout>